# deepfinance-ml

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AUDIT.md  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  routes.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  health.py  medical.py  predictions.py  risk.py  symbols.py
app/core/: __init__.py  auth.py  cache.py  logging.py  rate_limit.py
app/models/: __init__.py  base_model.py  lstm_model.py  registry.py  transformer_model.py  xgboost_model.py
app/schemas/: __init__.py  common.py  medical.py  prediction.py  risk.py
app/services/: __init__.py  cache_service.py  confidence_engine.py  data_fetcher.py  drug_interaction_checker.py  lab_test_analyzer.py  prediction_service.py  risk_service.py  side_effect_analyzer.py  symptom_analyzer.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
models/: __init__.py  base_model.py  lstm_model.py  transformer_model.py  xgboost_model.py
scripts/: preload_models.py  train_models.py
services/: __init__.py  confidence_engine.py  data_fetcher.py  prediction_service.py  risk_service.py
tests/: __init__.py  conftest.py
tests/test_api/: test_health.py  test_predictions.py
tests/test_models/: test_xgboost.py
tests/test_services/: test_confidence.py  test_risk.py
